# elevator_control_gui

./: CMakeLists.txt  README.md  package.xml
include/elevator_control_gui/: model.hpp  ola_model.hpp  ola_view_model.hpp  view_model.hpp
launch/: ev_gui.launch
lib/: libQt5Qml.so.5  libQt5Quick.so.5
qml/: quick.qrc
resources/: images.qrc  qml.qrc
resources/qml/: Elevator_service_box.qml  Ev_status_box.qml  Item_updown_panel.qml  New_window.qml  Ola_dial.qml  Robot_service_box.qml  Round_squere_button.qml  Sequence_viewer.qml  Set_robot_service_box.qml  main_page.qml  ola.qml
src/: main.cpp  model.cpp  ola_model.cpp  ola_view_model.cpp  view_model.cpp
